--- a/scratch.html
+++ b/scratch.html
@@ -12,18 +12,18 @@
         body {
             background: #f5f5f5;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            color: #000 !important; /* FORCE all body text to be black */
+            color: #000 !important; 
             margin: 0;
         }
 
         nav {
-            background: #000; /* black navbar */
+            background: #000; 
             padding: 12px;
             text-align: center;
         }
 
         nav a {
-            color: #fff !important; /* navbar links MUST stay white */
+            color: #fff !important;
             margin: 0 10px;
             text-decoration: none;
         }
@@ -39,7 +39,7 @@
             padding: 28px;
             border-radius: 8px;
             box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-            color: #000 !important; /* ensure text inside container is black */
+            color: #000 !important; 
         }
 
         .section {
@@ -52,7 +52,7 @@
             border-bottom: 1px solid #ccc;
             padding-bottom: 4px;
             font-weight: 600;
-            color: #000 !important; /* section titles black */
+            color: #000 !important;
         }
 
         .scratch-image img {
@@ -62,14 +62,14 @@
             margin: auto;
         }
 
-        /* Sidebar divs required for stylesheet credit */
+
         .leftvalue {
             position: fixed;
             left: 8px;
             top: 110px;
             width: 150px;
             font-size: 0.9rem;
-            color: #000 !important; /* force sidebar text to black */
+            color: #000 !important;
         }
 
         .rightvalue {
@@ -87,11 +87,11 @@
         }
 
         a {
-            color: #000 !important; /* make ALL links black */
+            color: #000 !important;
         }
 
         a:hover {
-            color: #000 !important; /* no change on hover; stays black */
+            color: #000 !important; 
             text-decoration: underline;
         }
     </style>
@@ -152,20 +152,20 @@
 
         <!-- IMAGE -->
         <section class="section scratch-image">
-            <h2>My Image (Non-Bootstrap)</h2>
+            <h2>My Image</h2>
             <img src="images/B167.JPG" alt="Austin Birchall">
         </section>
 
         <!-- LISTS -->
         <section id="lists" class="section">
-            <h2>Goals & Values (Nested Lists)</h2>
+            <h2>Goals & Values</h2>
 
             <ol>
                 <li>Health & Fitness
                     <ul>
                         <li>Run consistent weekly mileage</li>
                         <li>Strengthen core/lower body</li>
-                        <li>Stay disciplined in recovery</li>
+                        <li>Staying disciplined in recovery</li>
                     </ul>
                 </li>
 
@@ -181,28 +181,27 @@
                     <ul>
                         <li>Prioritize relationships</li>
                         <li>Serve consistently</li>
-                        <li>Live values-driven</li>
+                        <li>Find a wife</li>
                     </ul>
                 </li>
             </ol>
         </section>
 
-        <!-- YOUTUBE VIDEO -->
         <section id="video" class="section">
             <h2>Favorite Video</h2>
 
             <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/d33C8IE7WnQ?si=WOFxhv22Uc99kRVK"
-                title="YouTube video player"
+                title="Tame Impala Live at the Wave House"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
             </iframe>
         </section>
 
-        <!-- TABLEAU -->
+        <!-- tableau -->
         <section id="tableau" class="section">
-            <h2>Interactive Tableau Visualization</h2>
+            <h2>Tableau</h2>
 
             <div class='tableauPlaceholder' id='viz17123456789' style='position: relative'>
                 <noscript>
@@ -241,7 +240,6 @@
             </script>
         </section>
 
-        <!-- BACK TO TOP -->
         <p><a href="#top">Back to Top</a></p>
 
     </div>
