--- a/scratch.html
+++ b/scratch.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scratch Page - Austin Birchall</title>
 
-    <!-- Custom stylesheet -->
     <link rel="stylesheet" href="styles.css">
 
     <style>
         body {
             background: #f5f5f5;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            color: #000 !important; 
+            color: #000;
             margin: 0;
         }
 
         nav {
-            background: #000; 
+            background: #000;
             padding: 12px;
             text-align: center;
         }
 
         nav a {
-            color: #fff !important;
+            color: #fff;
             margin: 0 10px;
             text-decoration: none;
         }
@@ -39,12 +38,10 @@
             padding: 28px;
             border-radius: 8px;
             box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-            color: #000 !important; 
         }
 
         .section {
             margin-bottom: 32px;
-            color: #000 !important;
         }
 
         .section h2 {
@@ -52,7 +49,6 @@
             border-bottom: 1px solid #ccc;
             padding-bottom: 4px;
             font-weight: 600;
-            color: #000 !important;
         }
 
         .scratch-image img {
@@ -62,14 +58,13 @@
             margin: auto;
         }
 
-
+        /* Left + Right panels */
         .leftvalue {
             position: fixed;
             left: 8px;
             top: 110px;
             width: 150px;
             font-size: 0.9rem;
-            color: #000 !important;
         }
 
         .rightvalue {
@@ -78,28 +73,38 @@
             top: 110px;
             width: 180px;
             font-size: 0.9rem;
-            color: #000 !important; 
         }
 
         .mainbody {
             padding-top: 20px;
-            color: #000 !important;
         }
 
         a {
-            color: #000 !important;
+            color: #000;
         }
 
         a:hover {
-            color: #000 !important; 
             text-decoration: underline;
+        }
+
+        /* Make YouTube video scale correctly */
+        iframe {
+            max-width: 100%;
+        }
+
+        /* Make layout mobile-friendly */
+        @media (max-width: 768px) {
+            .leftvalue, .rightvalue {
+                position: static;
+                width: 100%;
+                margin-bottom: 20px;
+            }
         }
     </style>
 </head>
 
 <body id="top">
 
-<!-- NAV -->
 <nav>
     <a href="index.html">Home</a> |
     <a href="resume.html">Resume</a> |
@@ -109,19 +114,19 @@
     <a href="webapp.html">Web App</a>
 </nav>
 
-<!-- LEFT SIDE LINKS -->
 <div class="leftvalue">
     <strong>Quick Links</strong><br>
     <a href="#hobby">Hobby</a><br>
     <a href="#lists">Lists</a><br>
     <a href="#video">Video</a><br>
     <a href="#tableau">Tableau</a><br><br>
+
     <strong>Web App:</strong><br>
     <a href="webapp.html">Estimator</a><br><br>
+
     <a href="#top">Back to Top</a>
 </div>
 
-<!-- RIGHT SIDE -->
 <div class="rightvalue">
     <strong>Requirements:</strong>
     <ul>
@@ -134,29 +139,25 @@
     </ul>
 </div>
 
-<!-- MAIN CONTENT -->
 <div class="mainbody">
     <div class="scratch-container">
 
-        <h1>From-Scratch HTML &amp; CSS Page</h1>
-        <p>This page demonstrates hand-written HTML, CSS, and embedding techniques.</p>
+        <h1>From-Scratch HTML & CSS Page</h1>
+        <p>This page demonstrates hand-written HTML, CSS, and embedding tools.</p>
 
-        <!-- SECTION 1 -->
         <section id="hobby" class="section">
             <h2>Hobby & Interests</h2>
             <p>
-                I enjoy endurance training, skiing in the mountains, and helping people through meaningful service. 
-                These interests keep me motivated and grounded.
+                I enjoy endurance training, skiing in the mountains, and serving those around me.
+                These keep me grounded and motivated.
             </p>
         </section>
 
-        <!-- IMAGE -->
         <section class="section scratch-image">
-            <h2>My Image</h2>
+            <h2>My Image (Non-Bootstrap)</h2>
             <img src="images/B167.JPG" alt="Austin Birchall">
         </section>
 
-        <!-- LISTS -->
         <section id="lists" class="section">
             <h2>Goals & Values</h2>
 
@@ -165,7 +166,7 @@
                     <ul>
                         <li>Run consistent weekly mileage</li>
                         <li>Strengthen core/lower body</li>
-                        <li>Staying disciplined in recovery</li>
+                        <li>Stay disciplined in recovery</li>
                     </ul>
                 </li>
 
@@ -190,7 +191,7 @@
         <section id="video" class="section">
             <h2>Favorite Video</h2>
 
-            <iframe width="100" height="315"
+            <iframe width="100%" height="315"
                 src="https://www.youtube.com/embed/d33C8IE7WnQ?si=WOFxhv22Uc99kRVK"
                 title="Tame Impala Live at the Wave House"
                 frameborder="0"
@@ -199,9 +200,8 @@
             </iframe>
         </section>
 
-        <!-- tableau -->
         <section id="tableau" class="section">
-            <h2>Tableau</h2>
+            <h2>Interactive Tableau Visualization</h2>
 
             <div class='tableauPlaceholder' id='viz17123456789' style='position: relative'>
                 <noscript>
